--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello Ukraine!</p>
+    <p>Hello Ukraine and Uzhgorod!</p>
     <script src="js/script.js"> 
     
     </script>
