inex.html modified

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello Ukraine and Uzhgorod my friends!</p>
+    <p>Hello Ukraine and Poland</p>
     <script src="js/script.js"> 
     
     </script>
