sample object and usage of prompt

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Hello Ukraine and Poland</p>
-    <script src="js/script.js"> 
+    <script src="script.js"> 
     
     </script>
 </body>
